update the route path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactportfolio",
-  "homepage": "https://dhimal-bhupraj.github.io/",
+  "homepage": "https://dhimal-bhupraj.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
